--- a/itsmoarigato/itsmoarigato/src/main/resources/templates/main.html
+++ b/itsmoarigato/itsmoarigato/src/main/resources/templates/main.html
@@ -49,7 +49,7 @@
 							var url = $("#friendForm").attr("action");
 							var $showButton = $(this) 
 							url = url + "/" + $(".friendId",$showButton.parent()).val() +"/";
-							if($(".friendId",$showButton.parent()).val() == $("#un").text()){
+							if($(".friendId",$showButton.parent()).val() == $("#currentUserEmail").val()){
 								location.href="/my"
 							}else{
 								location.href=url
@@ -119,11 +119,11 @@
 					<tr>
 						<td>
 						<img data-bind="attr:{src: fromUser.image.url}" style="max-height:2em" class="icon">
-							<input type="hidden" class="friendId" data-bind="attr:{value:fromUser.name}" />
+							<input type="hidden" class="friendId" data-bind="attr:{value:fromUser.email}" />
 						</img><br /><span data-bind="text: fromUser.name"></span></td>
 						<td><img th:src="@{/resources/img/to.png}" style="max-height:3em" ></img></td>
 						<td><img data-bind="attr:{src: toUser.image.url}" style="max-height:2em" class="icon">
-							<input type="hidden" class="friendId" data-bind="attr:{value:toUser.name}" />
+							<input type="hidden" class="friendId" data-bind="attr:{value:toUser.email}" />
 						</img><br /><span data-bind="text: toUser.name"></span></td>
 					</tr>
 					</table>
