--- a/itsmoarigato/itsmoarigato/src/main/resources/templates/layout.html
+++ b/itsmoarigato/itsmoarigato/src/main/resources/templates/layout.html
@@ -63,7 +63,7 @@
 				text-align: center;
 			}
 			a {
-					color: green;
+				color: green;
 			}
 			.navbar-form {
 				margin-left: 1em;
@@ -83,6 +83,19 @@
 
 
 	<body>
+		<script>
+			var value;
+			var link;
+			
+			$(document).ready(function(){
+				link = document.getElementById("toCreate");
+			});
+			
+			function getToUserEmail(){
+				link.href = link.href.split("?")[0]+"?"+value;
+			}
+		</script>
+	
 		<div id="wrap">
 			<div class="navbar navbar-inverse navbar-static-top">
 				<div class="navbar-inner">
@@ -120,7 +133,7 @@
 							th:text="${globalMessage}">
 						Some Success message
 				</div>
-				<a id="toCreate" th:href="@{/create}"><img th:src="@{/resources/img/create.png}" alt="ありがとうを伝える"></img></a><br /><br />
+				<a id="toCreate" th:href="@{/create}" onclick=" getToUserEmail(); "><img th:src="@{/resources/img/create.png}" alt="ありがとうを伝える"></img></a><br /><br />
 				<hr />
 				<div layout:fragment="content">
 						Fake content
