friendページからの遷移のテストの追加

--- a/itsmoarigato/itsmoarigato/src/main/resources/templates/main.html
+++ b/itsmoarigato/itsmoarigato/src/main/resources/templates/main.html
@@ -105,7 +105,7 @@
 		
 		<div id="around">
 		<div data-bind="foreach: arigatos">
-			<table>
+			<table class="arigato">
 			<tr>
 				<td>
 					<span data-bind="if: fromUser.email == $parent.me">
