--- a/itsmoarigato/itsmoarigato/src/main/resources/templates/create.html
+++ b/itsmoarigato/itsmoarigato/src/main/resources/templates/create.html
@@ -5,11 +5,13 @@
 <body>
 	<div layout:fragment="content">
 		<script>
+		//FIXME hiddenから取得する 
 			var toUserEmail = location.search.substring(1);
 			
 			var viewModel = new AppViewModel()
 			$(document).ready(function(){
-				if(toUserEmail != "undefined"){
+				//FIXME 自分の友達のIdに含まれるかどうかをチェックする
+				if(toUserEmail != "undefined"){ 
 					$("#toUserId").val(toUserEmail)
 				}
 				
